feat(satp-hermes): added registry endpoint to openapi
